<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MiniWoT</string>
    <string name="button_menu_rosters">Plutony Pancerne</string>
    <string name="button_menu_simulate" tools:ignore="Typos">Symulacja 1vs1</string>
    <string name="button_menu_tanks">Lista Czołgów</string>
    <string name="button_menu_game">Rozgrywka</string>
    <string name="text_menu_version">Version 1.0.0</string>
    <string name="versus">VS</string>
    <string name="tank">czołg</string>
    <string name="compare">Starcie!</string>
    <string name="cover">osłona</string>
    <string name="hide">zasłonięty kadłub</string>
    <string name="side">bok/tył</string>
    <string name="advantage">przewaga</string>
    <string name="left">lewy</string>
    <string name="right">prawy</string>
    <string name="close_range">bliski zasięg</string>
    <string name="movement">ruch</string>
    <string name="critical">Trafienia krytyczne</string>
    <string name="button_random_crit">Losuj trafienie krytyczne</string>
    <string name="crit_list">Lista trafień krytycznych</string>
    <string name="crit_name">Nazwa trafienia krytycznego</string>
    <string name="crit_content">Treść karty</string>
    <string name="repairable">Naprawialne</string>
    <string name="damage">Uszkodzenia: </string>
    <string name="zero">0</string>
    <string name="chance">Szansa wylosowania: </string>
    <string name="search">Szukaj</string>
    <string name="tank_name">Nazwa czołgu</string>
    <string name="stat_firepower">S</string>
    <string name="stat_def">O</string>
    <string name="stat_move">M</string>
    <string name="stat_initiative">I</string>
    <string name="stat_hp">HP</string>
    <string name="stat_type">Typ pojazdu</string>
    <string name="stat_tier">Poziom</string>
    <string name="stat_nation">Kraj</string>
    <string name="stat_cost">Koszt</string>
    <string name="stat_special_rules">Specjalne zasady:</string>
    <string name="history_text">Historyczna paplanina</string>
    <string name="button_abilitiesList">Cechy pojazdów</string>
    <string name="terrainRules">Zasady terenu i przeszkód</string>
    <string name="addNew">Dodaj nową</string>
    <string name="unofficial">Nieoficjalny</string>
    <string name="lack">Brak</string>
    <string name="light">Lekki</string>
    <string name="medium">Średni</string>
    <string name="heavy">Ciężki</string>
    <string name="destroyer">Niszczyciel</string>
    <string name="artillery">Artyleria</string>
    <string name="type">Typ</string>
    <string name="nation">Kraj</string>
    <string name="greatBritain">Wielka Brytania</string>
    <string name="cccp">ZSRR</string>
    <string name="usa">USA</string>
    <string name="thirdReich">III Rzesza</string>
    <string name="official">Oficjalne</string>
    <string name="unofficials">Nieoficjalne</string>
    <string name="all">Wszystkie</string>
    <string name="filter">Filtr</string>
    <string name="abilityName">Nazwa cechy</string>
    <string name="terrainName">nazwa terenu</string>
    <string name="stationary">Nieruchomy</string>
    <string name="japan">Japonia</string>
    <string name="close">Zamknij</string>
    <string name="whats_new">Co nowego?</string>
    <string name="dontShowAgain">Nie pokazuj ponownie</string>
    <string name="appVersion">Version 2.2.9</string>
    <string name="name">Nazwa</string>
    <string name="ptsLimit">Limit punktów</string>
    <string name="next">Dalej</string>
    <string name="upgrades">Ulepszenia czołgów</string>
    <string name="lightTanks">Czołgi Lekkie</string>
    <string name="mediumTanks">Czołgi Średnie</string>
    <string name="heavyTanks">Czołgi Ciężkie</string>
    <string name="destroyers">Niszczyciele</string>
    <string name="settings">Ustawienia</string>
    <string name="deleteRoster">Usuń pluton</string>
    <string name="cleanRoster">Wyczyść pluton</string>
    <string name="rosterName">Nazwa plutonu</string>
    <string name="tiers">Poziomy</string>
    <string name="nations">Kraje</string>
    <string name="save">Zapisz</string>
    <string name="ready">Gotowe</string>
    <string name="crew">Załoga</string>
    <string name="modules">Moduły</string>
    <string name="ammo">Amunicja</string>
    <string name="consumables">Materiały eksploatacyjne</string>
    <string name="equipment">Wyposażenie</string>
    <string name="china">Chiny</string>
    <string name="poland">Polska</string>
    <string name="france">Francja</string>
    <string name="sweden">Szwecja</string>
    <string name="italy">Włochy</string>
    <string name="czechoslovakia">Czechosłowacja</string>

</resources>