<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationY="0"
    tools:context=".SimulationActivity">

    <AutoCompleteTextView
        android:id="@+id/sim_nameTank1"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:hint="@string/tank"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <AutoCompleteTextView
        android:id="@+id/sim_NameTank2"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/tank"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBaseline_toBaselineOf="@+id/sim_nameTank1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sim_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus"
        app:layout_constraintBaseline_toBaselineOf="@+id/sim_NameTank2"
        app:layout_constraintEnd_toStartOf="@+id/sim_NameTank2"
        app:layout_constraintStart_toEndOf="@+id/sim_nameTank1" />

    <Button
        android:id="@+id/sim_compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/compare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/sim_cover1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_nameTank1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/sim_cover2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:text="@string/cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_NameTank2" />

    <CheckBox
        android:id="@+id/sim_hide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/hide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_cover1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/sim_hide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/hide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_cover2" />

    <CheckBox
        android:id="@+id/sim_side1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/side"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_hide1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/sim_side2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:text="@string/side"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_hide2" />

    <ToggleButton
        android:id="@+id/sim_adventageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textColor="#455A64"
        android:textOff="@string/right"
        android:textOn="@string/left"
        app:layout_constraintBottom_toTopOf="@+id/sim_compareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/sim_adventageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advantage"
        app:layout_constraintBottom_toTopOf="@+id/sim_adventageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/sim_isClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_move1" />

    <Spinner
        android:id="@+id/sim_move1"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/movement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_side1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/sim_move2"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/movement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_side2" />

</androidx.constraintlayout.widget.ConstraintLayout>