<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tankAddLayout"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/layoutTank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tank"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/layoutTank_pts"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/layoutTank_flag"
        app:layout_constraintTop_toTopOf="@+id/layoutTank_image" />

    <TextView
        android:id="@+id/layoutTank_pts"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:text="@string/lack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layoutTank_addBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/layoutTank_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/tank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tank_profile_image" />

    <ImageView
        android:id="@+id/layoutTank_flag"
        android:layout_width="37dp"
        android:layout_height="25dp"
        android:contentDescription="@string/nation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layoutTank_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_android_black_24dp" />

    <ImageButton
        android:id="@+id/layoutTank_addBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />
</androidx.constraintlayout.widget.ConstraintLayout>